--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -1,3 +1,4 @@
+/* контейнер блока techs */
 .techs {
   width: 100%;
   box-sizing: border-box;
@@ -18,6 +19,7 @@
   }
 }
 
+/* глав заголовок блока */
 .techs__title {
   font-family: "Inter";
   font-style: normal;
@@ -38,6 +40,7 @@
   }
 }
 
+/* подконтейнер для содержимого блока */
 .techs__container {
   width: 100%;
   display: flex;
@@ -46,6 +49,7 @@
   align-items: center;
 }
 
+/* подзаголовок */
 .techs__subtitle {
   font-family: "Inter";
   font-style: normal;
@@ -71,6 +75,7 @@
   }
 }
 
+/* абзац про технологии */
 .techs__paragraph {
   width: 460px;
   font-family: "Inter";
@@ -100,6 +105,7 @@
   }
 }
 
+/* контейнер для текста */
 .techs__gallery {
   display: flex;
   align-items: center;
@@ -116,6 +122,7 @@
   }
 }
 
+/* текст с бэкграундом */
 .techs__gallery_img {
   width: 90px;
   height: 60px;
