--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -56,7 +56,7 @@
   font-size: 14px;
   line-height: 18px;
   color: #a0a0a0;
-  max-width: 1086px;
+  max-width: 90%;
   width: 100%;
   height: 50px;
   background: #f9f9f9;
@@ -66,12 +66,11 @@
 }
 @media screen and (max-width: 769px) {
   .search-form__input {
-    max-width: 654px;
+    max-width: 80%;
   }
 }
 @media screen and (max-width: 321px) {
   .search-form__input {
-    max-width: 238px;
     height: 44px;
     padding: 13px;
   }
