--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,7 +3,7 @@
   min-width: 320px;
   width: 100%;
   min-height: 100vh;
-  
+
   font-family: "Inter", "Helvetica Neue", "Arial", sans-serif;
   font-style: normal;
 
@@ -14,4 +14,14 @@
   -moz-text-size-adjust: 100%;
 
   margin: 0 auto;
+}
+@media screen and (max-width: 1279px) {
+  .app {
+    max-width: 768px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .app {
+    max-width: 320px;
+  }
 }
