--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,5 +1,5 @@
 /* контейнер стр. регистрации */
-.register {
+.login {
   margin: 0 auto;
   max-width: 396px;
   width: 100%;
@@ -9,34 +9,34 @@
   padding: 70px 0;
   box-sizing: border-box;
 }
-@media screen and (max-width: 769px) {
-  .register {
+@media screen and (max-width: 1279px) {
+  .login {
     padding: 232px 0;
   }
 }
-@media screen and (max-width: 321px) {
-  .register {
+@media screen and (max-width: 767px) {
+  .login {
     padding: 56px 0 30px;
   }
 }
 
 /* кликабельное лого сайта */
-.register__logo {
+.login__logo {
   background: url("../../images/logo.svg");
   align-self: flex-start;
   width: 38px;
   height: 38px;
   margin-bottom: 40px;
 }
-@media screen and (max-width: 321px) {
-  .register__logo {
+@media screen and (max-width: 767px) {
+  .login__logo {
     align-self: center;
     margin-bottom: 50px;
   }
 }
 
 /* заголовок */
-.register__title {
+.login__title {
   align-self: flex-start;
   font-family: "Inter";
   font-style: normal;
@@ -48,15 +48,15 @@
   margin-bottom: 40px;
   padding: 0;
 }
-@media screen and (max-width: 321px) {
-  .register__title {
+@media screen and (max-width: 767px) {
+  .login__title {
     margin-bottom: 80px;
     align-self: center;
   }
 }
 
 /* контейнер формы с 3мя импутами */
-.register__form {
+.login__form {
   box-sizing: border-box;
   width: 100%;
   display: flex;
@@ -66,14 +66,14 @@
   padding: 0px;
   margin: 0;
 }
-@media screen and (max-width: 321px) {
-  .register__form {
+@media screen and (max-width: 767px) {
+  .login__form {
     padding: 0 30px;
   }
 }
 
 /* контейнер для всех импут-контейнеров и подписи */
-.register__form_input-container {
+.login__form_input-container {
   list-style-type: none;
   width: 100%;
   display: flex;
@@ -83,14 +83,14 @@
   padding: 0px;
   gap: 20px;
 }
-@media screen and (max-width: 321px) {
-  .register__form_input-container {
+@media screen and (max-width: 767px) {
+  .login__form_input-container {
     margin-bottom: 267px;
   }
 }
 
 /* контейнер для лейбла и импута */
-.register__form_input-container_element {
+.login__form_input-container_element {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -98,7 +98,7 @@
 }
 
 /* лейбл */
-.register__form_label {
+.login__form_label {
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
@@ -108,7 +108,7 @@
 }
 
 /* сам инпут */
-.register__form_input {
+.login__form_input {
   box-sizing: border-box;
   width: 100%;
   border: none;
@@ -126,7 +126,7 @@
 }
 
 /* текстовая кнопка зарег */
-.register__form_btn {
+.login__form_btn {
   width: 100%;
   height: 45px;
   background: #ff6838;
@@ -143,8 +143,8 @@
   margin-bottom: 16px;
   padding: 0;
 }
-@media screen and (max-width: 321px) {
-  .register__form_btn {
+@media screen and (max-width: 767px) {
+  .login__form_btn {
     width: 260px;
     font-size: 12px;
     line-height: 15px;
@@ -153,7 +153,7 @@
 }
 
 /* контейнер для текста и ссылки */
-.register__form_text-link-container {
+.login__form_text-link-container {
   gap: 6px;
   width: 100%;
   display: flex;
@@ -161,7 +161,7 @@
 }
 
 /* текст */
-.register__form_question-text {
+.login__form_question-text {
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
@@ -172,15 +172,15 @@
   margin: 0;
   padding: 0;
 }
-@media screen and (max-width: 321px) {
-  .register__form_question-text {
+@media screen and (max-width: 767px) {
+  .login__form_question-text {
     font-size: 12px;
     line-height: 15px;
   }
 }
 
 /* текс ссылка */
-.register__form_link {
+.login__form_link {
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
@@ -190,8 +190,8 @@
   color: #ff6838;
   text-decoration: none;
 }
-@media screen and (max-width: 321px) {
-  .register__form_link {
+@media screen and (max-width: 767px) {
+  .login__form_link {
     font-size: 12px;
     line-height: 15px;
   }
