--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -143,6 +143,9 @@
   margin-bottom: 16px;
   padding: 0;
 }
+.login__form_btn:disabled {
+  background: #a0a0a0;
+}
 @media screen and (max-width: 767px) {
   .login__form_btn {
     width: 260px;
@@ -195,4 +198,16 @@
     font-size: 12px;
     line-height: 15px;
   }
+}
+
+/* всплывающая подпись с сообщением о ошибке */
+.login__form_error-text {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
+  color: #ee3465;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
