--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -137,6 +137,8 @@
   font-size: 10px;
   line-height: 12px;
   color: #ee3465;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 /* текстовая кнопка зарег */
@@ -156,6 +158,9 @@
   margin: 0;
   margin-bottom: 16px;
   padding: 0;
+}
+.register__form_btn:disabled {
+  background: #a0a0a0;
 }
 @media screen and (max-width: 767px) {
   .register__form_btn {
